Reorganização do Cliente-Servidor em módulos independentes entre si. Reorganização de Exceções, Enums e DTOs.